--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>React App</title>
+    <title>15 Puzzle</title>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans:400,700" rel="stylesheet">
   </head>
   <body>
